Fix carousel images height + flex-wrap for <Tags/>

--- a/src/assets/styles/apartment.css
+++ b/src/assets/styles/apartment.css
@@ -48,6 +48,7 @@ span {
 
 .align-tags {
   display: flex;
+  flex-wrap: wrap;
   width: 100%;
   justify-content: flex-start;
   gap: 10px;
