--- a/src/assets/styles/slider.css
+++ b/src/assets/styles/slider.css
@@ -5,8 +5,7 @@
 .slide-image img {
   object-fit: cover;
   width: 100%;
-  max-height: 415px;
-  min-height: 255px;
+  height: 255px;
   border-radius: 10px;
   background-color: grey;
 }
@@ -28,4 +27,11 @@
 .arrow-right {
   right: 0;
   transform: rotate(-90deg);
+}
+
+@media screen and (min-width: 1080px) {
+  .slide-image img {
+    height: 415px;
+    border-radius: 25px;
+  }
 }
